Closed
Bug 1266248
Opened 9 years ago
Closed 9 years ago
Re-land the useful renaming parts of bug 1208344
Categories
(Core :: CSS Parsing and Computation, defect)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
mozilla48
| Tracking | Status | |
|---|---|---|
| firefox48 | --- | fixed |
People
(Reporter: dholbert, Assigned: dholbert)
References
Details
Attachments
(2 files)
|
4.05 KB,
patch
|
Details | Diff | Splinter Review | |
|
1.49 KB,
patch
|
Details | Diff | Splinter Review |
Filing this bug on re-landing the still-useful parts of bug 1208344, after its patch-stack was backed out (to change the overall strategy) in bug 1262049.
| Assignee | ||
Updated•9 years ago
|
Assignee: nobody → dholbert
| Assignee | ||
Comment 1•9 years ago
|
||
In particular, I'll be re-landing this patch to rename the MapSinglePropertyInto args:
https://hg.mozilla.org/mozilla-central/rev/b3a36d79154f
...and this "Can't map into a logical property" MOZ_ASSERT that I added to MapSinglePropertyInto:
https://hg.mozilla.org/mozilla-central/rev/c1e9d6224c5a#l1.19
(but not the rest of c1e9d6224c5a's MapSinglePropertyInto refactoring)
| Assignee | ||
Comment 2•9 years ago
|
||
Here's the first part (re-landing an unbitrotted version of mozilla-central commit b3a36d79154f).
| Assignee | ||
Comment 3•9 years ago
|
||
...and here's the second part (adding back the assertion from mozilla-central changeset c1e9d6224c5a).
Carrying forward r=heycam, since these are substantially the same as the old versions (verified locally by comparing new vs. old patches in 'meld' merge tool).
| Assignee | ||
Updated•9 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Updated•9 years ago
|
status-firefox48:
affected → ---
Comment 5•9 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/91b6739888bf
https://hg.mozilla.org/mozilla-central/rev/97a73074dc7c
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
status-firefox48:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
You need to log in
before you can comment on or make changes to this bug.
Description
•