Bug 1266248 part 2: Add assertion to verify that MapSinglePropertyInto() isn't called with a logical target-property. r=heycam

(This commit is effectively re-landing an assertion from changeset c1e9d6224c5a, aka bug 1208344 part 4. The rest of that patch is no longer needed, but this assertion is still useful.)

MozReview-Commit-ID: 7v5IwzS2CtP